assets/css/main.scss
---
---

$main: #1a222c;
$sec: #4B5664;
$purple: #54516A;
$cut: 768px;

@import url('https://fonts.googleapis.com/css?family=Montserrat');

body {
  margin: 0;
  font-family: 'Montserrat', sans-serif;
  max-width: 100%;
  overflow-x: hidden;
}

@-webkit-keyframes pulse {
    from {
        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
        filter: alpha(opacity=40);
        opacity: .4;
        top: 0;
    }
    50% {
        -ms-filter: none;
        -webkit-filter: none;
        filter: none;
        opacity: 1;
        top: -10px;
    }
    to {
        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
        filter: alpha(opacity=40);
        opacity: .4;
        top: 0;
    }
}

@keyframes pulse {
    from {
        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
        filter: alpha(opacity=40);
        opacity: .4;
        top: 0
    }
    50% {
        -ms-filter: none;
        -webkit-filter: none;
        filter: none;
        opacity: 1;
        top: -10px
    }
    to {
        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
        filter: alpha(opacity=40);
        opacity: .4;
        top: 0
    }
}

#particles-js {
  background: $main;
  box-sizing: border-box;
  display: block;
  vertical-align: bottom;
  width: 100vw;
  min-height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  overflow-x: hidden;
  .particles-js-canvas-el {
    width:100vw !important;
    height:100vh !important;
  }
}

.content {
  z-index: 1;
  text-align: center;
  color:#FFF;
  position: absolute;
  top: 50%;
  left: 50%;
  margin: 0 auto;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  .site-title {
    font-size: 100px;
    display: block;
    line-height: 1;
    @media only screen and (min-width:$cut){
      margin: 0;
      font-size: 100px;
    }
  }
  .site-description {
    font-size: 20px;
    display: block;
    line-height: 1;
    margin: 5px 0 10px 0;
    @media only screen and (min-width:$cut){
      font-size: 40px;
    }
  }
  .link {
    color: #FFF;
    display: inline-flex;
    justify-content: space-between;
    text-decoration: none;
    font-size: 15px;
    margin: 10px;
    @media only screen and (min-width:$cut){
      font-size: 20px;
    }
  }
}

.icons-header {
  display: flex;
  justify-content: center;
  text-align: center;
  .icon {
    text-align: center;
    color: #FFF;
    width: 20px;
    height: 20px;
    font-size: 20px;
    padding: 10px;
    margin: 2px;
    border-radius: 50%;
    border: 2px solid #FFF;
    transition: all .7s;
    &:hover {
      color: $main;
      background: #FFF;
    }
    &:active {
      color: $main;
      background: #FFF;
    }
    @media only screen and (min-width:$cut) {
      width: 35px;
      height: 35px;
      font-size: 35px;
    }
  }
}

.down {
  color: #FFF;
  position: absolute;
  bottom: 25px;
  width: 100%;
  margin: 0 auto;
  display: block;
  text-align: center;
  font-size: 30px;
  cursor: pointer;
  .icon {
      position: absolute;
      -webkit-transform-style: preserve-3d;
      transform-style: preserve-3d;
      top: 50%;
      left: 50%;
      -webkit-transform: translate(-50%, -50%);
      transform: translate(-50%, -50%);
      width: 100px;
      height: 100px;
      fill: #fff;
      -webkit-animation: pulse 1.3s infinite;
      animation: pulse 1.3s infinite;
      &:hover {
        color: $sec;
      }
      &:active {
        color: $sec;
      }
  }
}

.user {
  text-align: center;
  margin: 20px auto;
  font-size: 60px;
  p {
    font-size: 16px;
  }
  @media only screen and (min-width: $cut) {
    font-size: 75px;
  }
}

.user-details {
  text-align: center;
  font-size: 16px;
  margin: 10px auto;
}

.user-projects {
  margin: 40px auto;
  img {
    max-width: 100%;
    height: auto;
    border-radius: 5px;
  }
  h5 {
    margin: 0;
  }
  ul, ol {
    list-style-type: square;
    margin: 1em 0;
    padding-left: 40px;
  }
  li {
    color: $main;
    font-size: 1.1rem;
  }
  p {
    margin-right: 5px;
  }
}

.images {
  @media only screen and (min-width: $cut) {
    float: right;
  }
}

.project-link {
  display: block;
  width: 100px;
  margin: 10px 0px;
  padding: 5px;
  color: $main;
  background-color: transparent;
  border: 1px solid $main;
  border-radius: 10px;
  text-align: center;
  outline: none;
  text-decoration: none;
  cursor: pointer;
  transition: color 0.3s ease-out,
              background-color 0.3s ease-out,
              border-color 0.3s ease-out;
  &:hover {
    background-color: $purple;
    border-color: $purple;
    color: #fff;
    transition: color 0.3s ease-in,
                background-color 0.3s ease-in,
                border-color 0.3s ease-in;
  }
  &:active {
    background-color: $purple;
    border-color: $purple;
    color: #fff;
    transition: color 0.3s ease-in,
                background-color 0.3s ease-in,
                border-color 0.3s ease-in;
  }
}

.footer {
  background: $main;
  padding: 10px 0;
  margin-top: 100px;
  text-align: center;
  color: #FFF;
  overflow-x: hidden;
  .love {
    color: red;
  }
  a {
    text-decoration: none;
    margin: 0;
    color: #FFF;
    &:hover{
      color: $sec;
    }
    &:active {
      color: $sec;
    }
  }
}

